# turkey.club

./: .editorconfig  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/project/: goals.md  implementation_plan.md  requirements.md  use_cases.md
docs/user/: installation.md  performance.md  prerequisites.md
src/turkey_club/: calibrate.py  cli.py  config.py  detect.py  downscale.py  export.py  identify.py  merge.py  pipeline.py  segment.py  source.py
tests/: test_smoke.py
