[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "turkey-club"
version = "0.1.0"
description = "Extract per-shot clips of a target bowler from a fixed-camera match video."
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12",
    "opencv-python>=4.9",
    "numpy>=1.26",
    "mediapipe>=0.10",
    "easyocr>=1.7",
    "ultralytics>=8.1",
    "yt-dlp>=2024.04.09",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
]

[project.scripts]
turkey-club = "turkey_club.cli:app"

[tool.setuptools.packages.find]
where = ["src"]
